Improve background display on mobile view by making it fixed
Update the CSS for the drawing background to use `background-attachment: fixed` and hardware acceleration to prevent flickering and ensure it remains static during scrolling on mobile devices.

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -193,9 +193,12 @@ input:-webkit-autofill:focus {
   background: url("https://media.istockphoto.com/id/1430511443/vector/christmas-mistletoe-foliage-and-berries-vector-seamless-pattern.jpg?s=612x612&w=0&k=20&c=oqxlH7ytgd5yjBQroACirJ1gH7Au1tq8gmsdeGd-Crk=")
     center center;
   background-size: 500px;
+  background-attachment: fixed;
   opacity: 1;
   pointer-events: none;
   filter: brightness(0.9);
+  transform: translateZ(0);
+  will-change: transform;
 }
 
 #drawing-bg-root {
